Fixed ordering of z-index

--- a/public/css/taskbook.css
+++ b/public/css/taskbook.css
@@ -43,7 +43,7 @@
     overflow: hidden;
     visibility: visible;
     position:fixed;
-    z-index:1030;
+    z-index:1020;
 }
 
 .addlists {
@@ -56,7 +56,7 @@
     overflow: hidden;
     visibility: visible;
     position:fixed;
-    z-index:1030;
+    z-index:1020;
 }
 
 #edittask {
@@ -77,7 +77,7 @@
     overflow: hidden;
     visibility: hidden;
     position:fixed;
-    z-index:1030;
+    z-index:1040;
 }
 
 #editlist {
@@ -98,7 +98,7 @@
     overflow: hidden;
     visibility: hidden;
     position:fixed;
-    z-index:1030;
+    z-index:1040;
 }
 
 .alert-info {
